--- a/InternetBankaciligi.MVC/Views/Login/Index.cshtml
+++ b/InternetBankaciligi.MVC/Views/Login/Index.cshtml
@@ -1,8 +1,7 @@
 ﻿<link href="~/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link href="~/assets/css/userlogin.css" rel="stylesheet">
 
-@model InternetBankaciligi.Entities.API.ExchangeRateInfo;
-@*düzeltilecek buradaki exchangerateinfo olayı şimdilik ui düzgün dursun diye koydum onu*@
+@model InternetBankaciligi.Entities.Dtos.SignInUserDto;
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="container">
@@ -11,25 +10,27 @@
             <div class="card shadow-lg border-0 rounded-lg mt-5 col-md-6">
                 <div class="card-header"><h3 class="text-center font-weight-light my-4"><span class="fas fa-house-user"></span> Giriş Yap</h3></div>
                 <div class="card-body">
-                    <div class="col-lg-6">
-                        <div class="form-sample">
-                            <div class="form-group">
-                                <p><b>Kullanıcı Adı</b></p>
-                                @Html.TextBoxFor(x => x.Isim, new { @class = "form-control" })<br />
+                    @using (Html.BeginForm("SignIn", "Login", FormMethod.Post)) { 
+
+                        <div class="col-lg-6">
+                            <div class="form-sample">
+                                <div class="form-group">
+                                    <p><b>TC Kimlik Numarası</b></p>
+                                    @Html.TextBoxFor(x => x.TCNo, new { @class = "form-control" })<br />
+                                </div>
+                                <div class="form-group">
+                                    <p><b>Kullanıcı Şifresi</b></p>
+                                    @Html.TextBoxFor(x => x.UserPassword, new { @class = "form-control", type = "Password" })<br />
+                                </div>
                             </div>
-                            <div class="form-group">
-                                <p><b>Kullanıcı Şifresi</b></p>
-                                @Html.TextBoxFor(x => x.Isim, new { @class = "form-control", type = "Password" })<br />
-                            </div>
+
+                            <button class="btn btn-info">Giriş Yap</button>
+
                         </div>
-
-                        <button class="btn btn-info">Giriş Yap</button>
-
-                    </div>
-
-                    <div class="card-footer text-center">
-                        <button class="btn btn-primary" type="button" onclick="location.href='@Url.Action("Register", "Login")'"><span class="fas fa-sign-in-alt"></span> Kayıt Ol</button>
-                    </div>
+                    }
+                <div class="card-footer text-center">
+                    <button class="btn btn-primary" type="button" onclick="location.href='@Url.Action("Register", "Login")'"><span class="fas fa-sign-in-alt"></span> Kayıt Ol</button>
+                </div>
                 </div>
                 <div class="col-lg-6" data-aos="fade-right">
                     <img src="assets/img/about-extra-1.svg" class="img-fluid" alt="">
