--- a/InternetBankaciligi.MVC/Views/Login/Index.cshtml
+++ b/InternetBankaciligi.MVC/Views/Login/Index.cshtml
@@ -29,7 +29,7 @@
                         </div>
                     }
                 <div class="card-footer text-center">
-                    <button class="btn btn-primary" type="button" onclick="location.href='@Url.Action("Register", "Login")'"><span class="fas fa-sign-in-alt"></span> Kayıt Ol</button>
+                    <button class="btn btn-primary" type="button" onclick="location.href='@Url.Action("Register", "Login")'"><span class="fas fa-sign-in-alt"></span>Müşteri Ol</button>
                 </div>
                 </div>
                 <div class="col-lg-6" data-aos="fade-right">
