--- a/InternetBankaciligi.MVC/Views/Varliklar/Index.cshtml
+++ b/InternetBankaciligi.MVC/Views/Varliklar/Index.cshtml
@@ -1,8 +1,280 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿
+@using Microsoft.AspNetCore.Routing.Internal
+@model InternetBankaciligi.MVC.ViewModels.AccountViewModel
+
+<script type="text/javascript">
+
+    $('#createAccountModal').on('shown.bs.modal',
+        function() {
+            $('#btnCreateAccount').trigger('focus');
+        });
+    $('#createTransactionModal').on('shown.bs.modal',
+        function() {
+            $('#btnCreateTransaction').trigger('focus');
+        });
+
+</script>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+
+    <title>Chain Portföy Yönetim Uygulaması</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="~/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/assets/css/templatemo-chain-app-dev.css">
+    <link rel="stylesheet" href="~/assets/css/animated.css">
+    <link rel="stylesheet" href="~/assets/css/owl.css">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Skydash Admin</title>
+    <!-- plugins:css -->
+    <link rel="stylesheet" href="~/vendors/feather/feather.css">
+    <link rel="stylesheet" href="~/vendors/ti-icons/css/themify-icons.css">
+    <link rel="stylesheet" href="~/vendors/css/vendor.bundle.base.css">
+    <!-- endinject -->
+    <!-- Plugin css for this page -->
+    <link rel="stylesheet" href="~/vendors/datatables.net-bs4/dataTables.bootstrap4.css">
+    <link rel="stylesheet" href="~/vendors/ti-icons/css/themify-icons.css">
+    <link rel="stylesheet" type="text/css" href="~/js/select.dataTables.min.css">
+    <!-- End plugin css for this page -->
+    <!-- inject:css -->
+    <link rel="stylesheet" href="~/css/vertical-layout-light/style.css">
+    <!-- endinject -->
+    <link rel="shortcut icon" href="~/images/favicon.png" />
+
+</head>
+<body style="background-color: #f5f7ff">
+    @{
+        @*if (Model.CreateTransactionDto != null)
+            {
+                if (Model.CreateTransactionDto.IsSuccess == false)
+                {
+                    <script>window.alert("fgdgfdfg");</script>
+                }
+            }*@
+    }
+
+    <!-- ***** Header Area Start ***** -->
+    <div>
+        <header class="header-area header-sticky wow slideInDown" data-wow-duration="0.75s" data-wow-delay="0s" style="background-color: white">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <nav class="main-nav">
+                            <!-- ***** Logo Start ***** -->
+                            <a href="index.html" class="logo">
+                                <img src="~/assets/images/logo.png" style="margin-top: 20px" alt="Chain App Dev">
+                            </a>
+                            <!-- ***** Logo End ***** -->
+                            <!-- ***** Menu Start ***** -->
+                            <ul class="nav">
+                                @*<li class="scroll-to-section"><a href=@Url.Action("Index", "Home") class="active">AnaSayfa</a></li>
+                                    <li class="scroll-to-section"><a href=@Url.Action("Index", "Portfolio")>Portföy</a></li>
+                                    <li>
+                                        <div class="gradient-button"><a id="modal_trigger" href="@Url.Action("Logout", "Login")"><i class="fa fa-sign-in-alt"></i> Çıkış Yap</a></div>
+                                    </li>*@
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+            <nav class="sidebar sidebar-offcanvas" id="sidebar" style="margin-top: -5px">
+                <ul class="nav">
+                    @foreach (var x in Model.UserAccounts)
+                    {
+                        @using (Html.BeginForm("Index", "Varliklar", new { id = x.Id, check = true }, FormMethod.Post))
+                        {
+                            <li class="nav-item">
+                                <div class="nav-link" href="index.html">
+                                    <i class="icon-grid menu-icon"></i>
+                                    <button class="btn btn-white menu-title">@x.AccountName </button>
+                                </div>
+                            </li>
+                        }
+                    }
+                    <li class="nav-item">
+                        <button type="button" class="btn btn-dark" style="margin-top: 10px; margin-left: 5px" id="btnCreateAccount" data-toggle="modal" data-target="#createAccountModal">Hesap Oluştur</button>
+                    </li>
+
+                </ul>
+            </nav>
+        </header>
+    </div>
+    <div>
+        <div class="container-scroller" style="margin-top: 50px; margin-left: 300px;">
+            @if (Model.CheckAccountPartial == true)
+            {
+                <div class="container-fluid page-body-wrapper">
+                    <div class="row col-md-12">
+                        <div class="col-md-12 grid-margin stretch-card">
+                            <div class="card position-relative">
+                                <div class="card-body">
+
+                                    <div class="table-responsive">
+                                        <table class="table table-striped" id="tblWallet">
+
+                                            <h5>Mevcut Bakiye: @Model.AmountTypeWallets.Select(x => x.TotalWelthOfWallet).FirstOrDefault()</h5>
+                                            <br />
+
+                                            <div>
+                                                <h2>Varlıkların </h2>
+                                                <button id="btnCreateTransaction" data-toggle="modal" data-target="#createTransactionModal" class="btn btn-dark" style="float: right; margin-bottom: 5px;">İşlem Yap </button>
+                                            </div>
+
+                                            <br />
+                                            <thead class="thead-dark">
+                                                <tr>
+                                                    <th scope="col">Para Adı</th>
+                                                    <th scope="col">Para Miktarı</th>
+                                                    @*<th scope="col">Ortalama Alış Fiyatı</th>*@
+                                                    <th scope="col">Sahip Olunan Toplam Para Fiyatı</th>
+                                                    @*<th scope="col">Kar-Zarar Durumu</th>*@
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+
+                                                @foreach (var amountsTypes in Model.AmountTypeWallets)
+                                                {
+                                                    <tr>
+                                                        <td id="tdCoinName"> @amountsTypes.AmountTypeName</td>
+                                                        <td> @amountsTypes.AmountOfAmountType</td>
+                                                        @*<td id="tdAvarageBuyPrice"> @amountsTypes.AvarageBuyPrice</td>*@
+                                                        <td> @amountsTypes.TotalWelthOfAmountType</td>
+                                                        @*<td id="karzarar"> </td>*@
+                                                    </tr>
+                                                }
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    @*@Html.PartialAsync("_PortfolioDetailPartial");*@
+                                    <!-- işlem ekle modal -->
+           
+                                    <div class="modal fade" id="createTransactionModal" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                        <div class="modal-dialog modal-dialog-centered" role="document">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h3 class="modal-title" id="exampleModalCenterTitle">İşlem Ekle</h3>
+                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                        <span aria-hidden="true">&times;</span>
+                                                    </button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <ul class="nav nav-tabs" id="tabContent">
+                                                        <li class="active"><a href="#buy" data-toggle="tab">Para Yatır&nbsp;| </a></li>
+                                                        <li><a href="#sell" data-toggle="tab">&nbsp; Para Çek &nbsp;| </a></li>
+                                                        <li><a href="#transfer" data-toggle="tab">&nbsp; Transfer Et</a></li>
+                                                    </ul>
+                                                    <div class="tab-content" style="background-color: lightskyblue">
+                                                        <div class="tab-pane active" id="buy">
+                                                            @using (Html.BeginForm("BeginTransaction", "Varliklar", FormMethod.Post))
+                                                            {
+                                                                <p style="color: black"><b>Para Seçiniz</b></p>@*, @readonly = "readonly"*@
+                                                    
+                                                                @Html.TextBoxFor(m => m.CreateTransactionDto.AmountTypeName, new { @type = "text", @id = "txtPrice" })
+                                                                @*@Html.DropDownListFor(x => x.CreateTransactionDto.AmountTypeName,
+            (List<SelectListItem>) ViewBag.dgr, new { @class = "form-control", id = "buyAmountType", @onchange = "DdlChange(this.value,this.id)" })*@<br />
+                                                                <p style="color: black"><b>Para Fiyatı</b></p>
+                                                                @Html.TextBoxFor(m => m.CreateTransactionDto.AmountTypePrice, new { @type = "text", @id = "txtPrice" })
+                                                                <p><b></b></p>
+                                                                <p style="color: black"><b>Yatırmak İstediğiniz Miktar</b></p>
+                                                                @Html.TextBoxFor(m => m.CreateTransactionDto.AmountTypeAmount, new { @type = "text", @id = "txtAmount", @onchange = "CalculateTotalAmount(this.value,this.id)" })
+                                                                <p><b></b></p>
+                                                                <p style="color: black"><b>Toplam Tutar</b></p>
+                                                                @Html.TextBoxFor(m => m.CreateTransactionDto.TotalAmount, new { @type = "text", @id = "txtTotalAmount" })
+                                                                @*@Html.TextBoxFor(m => m.CreateTransactionDto.TransactionType, new { @Value = "4" })*@
+
+                                                                <p><b></b></p>
+                                                                <button class="btn btn-primary">Para Yatır</button>
+                                                            }
+                                                        </div>
+
+                                                    </div>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
+                                                    <button class="btn btn-primary">Değişiklikleri Kaydet</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+        <!-- hesap ekle -->
+        <div class="modal fade" id="createAccountModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLongTitle">Hesap Oluştur</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body" style="background-color: lightskyblue">
+                        @using (Html.BeginForm("CreateAccount", "Varliklar", FormMethod.Post))
+                        {
+                            <div class="form-sample">
+                                <div class="form-group">
+                                    <p style="color: black"><b>Hesap İsmi</b></p>
+                                    @*@Html.LabelFor(x => x.createPortfolioDto.PortfolioName, new { @class = "form-control", TextWriter = "Portföy İsmi: " })*@
+                                    @Html.TextBoxFor(x => x.CreateAccountDto.AccountName, new { @class = "form-control" })
+                                </div>
+                            </div>
+                            <button class="btn btn-primary" style="background-color: white; color: black">Oluştur</button>
+                        }
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Çıkış</button>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--portföy ekle bitiş-->
+    <script src="~/vendors/js/vendor.bundle.base.js"></script>
+    <!-- endinject -->
+    <!-- Plugin js for this page -->
+    <script src="~/vendors/datatables.net/jquery.dataTables.js"></script>
+    <script src="~/vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
+    <script src="~/js/dataTables.select.min.js"></script>
+</body>
+</html>
 
 
-Varliklar
+
+<script src="~/js/chosen.jquery.js"></script>
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<link href="~/css/bootstrap-chosen.css" rel="stylesheet" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" />
+
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js">
+</script>
+
+
+
