Hesap oluşturulduğunda iban oluşturulması, para gönderme, hesaplar arası ve kullancılar arası para transferi yapıldı.

--- a/InternetBankaciligi.MVC/Views/Varliklar/Index.cshtml
+++ b/InternetBankaciligi.MVC/Views/Varliklar/Index.cshtml
@@ -128,6 +128,8 @@
 
                                             <h5>Mevcut Bakiye: @Model.AmountTypeWallets.Select(x => x.TotalWelthOfWallet).FirstOrDefault()</h5>
                                             <br />
+                                            <h5>Hesap Iban: @Model.UserAccounts.Select(x => x.Iban ).FirstOrDefault()</h5>
+                                            <br />
 
                                             <div>
                                                 <h2>Varlıkların </h2>
@@ -182,30 +184,67 @@
                                                             @using (Html.BeginForm("BeginTransaction", "Varliklar", FormMethod.Post))
                                                             {
                                                                 <p style="color: black"><b>Para Seçiniz</b></p>@*, @readonly = "readonly"*@
-                                                    
+
                                                                 @Html.TextBoxFor(m => m.CreateTransactionDto.AmountTypeName, new { @type = "text", @id = "txtPrice" })
                                                                 @*@Html.DropDownListFor(x => x.CreateTransactionDto.AmountTypeName,
-            (List<SelectListItem>) ViewBag.dgr, new { @class = "form-control", id = "buyAmountType", @onchange = "DdlChange(this.value,this.id)" })*@<br />
-                                                                <p style="color: black"><b>Para Fiyatı</b></p>
-                                                                @Html.TextBoxFor(m => m.CreateTransactionDto.AmountTypePrice, new { @type = "text", @id = "txtPrice" })
+                (List<SelectListItem>) ViewBag.dgr, new { @class = "form-control", id = "buyAmountType", @onchange = "DdlChange(this.value,this.id)" })*@<br />
+                             
                                                                 <p><b></b></p>
                                                                 <p style="color: black"><b>Yatırmak İstediğiniz Miktar</b></p>
-                                                                @Html.TextBoxFor(m => m.CreateTransactionDto.AmountTypeAmount, new { @type = "text", @id = "txtAmount", @onchange = "CalculateTotalAmount(this.value,this.id)" })
-                                                                <p><b></b></p>
-                                                                <p style="color: black"><b>Toplam Tutar</b></p>
-                                                                @Html.TextBoxFor(m => m.CreateTransactionDto.TotalAmount, new { @type = "text", @id = "txtTotalAmount" })
-                                                                @*@Html.TextBoxFor(m => m.CreateTransactionDto.TransactionType, new { @Value = "4" })*@
-
+                                                                @Html.TextBoxFor(m => m.CreateTransactionDto.TotalAmount, new { @type = "text", @id = "txtAmount", @onchange = "CalculateTotalAmount(this.value,this.id)" })
+                                                                <p><b></b></p>                                                           
+                                                  
                                                                 <p><b></b></p>
                                                                 <button class="btn btn-primary">Para Yatır</button>
                                                             }
                                                         </div>
+                                                        <div class="tab-pane" id="sell">
+                                                            @using (Html.BeginForm("DrawingTransaction", "Varliklar", FormMethod.Post))
+                                                            {
+                                                                <p style="color: black"><b>Para Seçiniz</b></p>@*, @readonly = "readonly"*@
 
+                                                                @Html.TextBoxFor(m => m.CreateTransactionDto.AmountTypeName, new { @type = "text", @id = "txtPrice" })
+                                                                @*@Html.DropDownListFor(x => x.CreateTransactionDto.AmountTypeName,
+                (List<SelectListItem>) ViewBag.dgr, new { @class = "form-control", id = "buyAmountType", @onchange = "DdlChange(this.value,this.id)" })*@<br />
+                                             
+                                                                <p><b></b></p>
+                                                        
+                                                                <p><b></b></p>
+                                                                <p style="color: black"><b>Çekmek İstediğiniz Miktar</b></p>
+                                                                @Html.TextBoxFor(m => m.CreateTransactionDto.TotalAmount, new { @type = "text", @id = "txtTotalAmount" })
+                                                                @*@Html.TextBoxFor(m => m.CreateTransactionDto.TransactionType, new { @Value = "4" })*@
+
+                                                                <p><b></b></p>
+                                                                <button class="btn btn-primary">Para Çek</button>
+                                                            }
+                                                        </div>
+                                                        <div class="tab-pane" id="transfer">
+                                                            @using (Html.BeginForm("TransferTransaction", "Varliklar", FormMethod.Post))
+                                                            {
+
+                                                                @Html.TextBoxFor(m => m.CreateTransactionDto.AmountTypeName, new { @type = "text", @id = "txtPrice" })
+                                                                @*@Html.DropDownListFor(x => x.CreateTransactionDto.AmountTypeName,
+            (List<SelectListItem>) ViewBag.dgr, new { @class = "form-control", id = "buyAmountType", @onchange = "DdlChange(this.value,this.id)" })*@<br />
+                                                
+                                                            
+                                              
+                                                                @*@Html.TextBoxFor(m => m.CreateTransactionDto.TransactionType, new { @Value = "4" })*@
+
+                                                                <p style="color: black"><b>Iban Giriniz</b></p>@*, @readonly = "readonly"*@
+
+                                                                @Html.TextBoxFor(m => m.CreateTransactionDto.Iban, new { @type = "text", @id = "txtPrice" })
+                                                                @*@Html.DropDownListFor(x => x.CreateTransactionDto.AmountTypeName,
+            (List<SelectListItem>) ViewBag.dgr, new { @class = "form-control", id = "buyAmountType", @onchange = "DdlChange(this.value,this.id)" })*@<br />                                                              
+                                                                <p style="color: black"><b>Göndermek İstediğiniz Miktar</b></p>
+                                                                @Html.TextBoxFor(m => m.CreateTransactionDto.TotalAmount, new { @type = "text", @id = "txtAmount", @onchange = "CalculateTotalAmount(this.value,this.id)" })
+                                                                <p><b></b></p>
+                                                                <button class="btn btn-primary">Transfer Et</button>
+                                                            }
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <div class="modal-footer">
-                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
-                                                    <button class="btn btn-primary">Değişiklikleri Kaydet</button>
+                                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>         
                                                 </div>
                                             </div>
                                         </div>
