--- a/InternetBankaciligi.MVC/Views/Home/Index.cshtml
+++ b/InternetBankaciligi.MVC/Views/Home/Index.cshtml
@@ -1,5 +1,10 @@
 ﻿@using InternetBankaciligi.Entities.API;
 @model List<ExchangeRateInfo>;
+@using Microsoft.AspNetCore.Mvc.Localization
+@using InternetBankaciligi.MVC.Controllers
+@using Microsoft.Extensions.Localization
+
+@inject IStringLocalizer<InternetBankaciligi.MVC.Controllers.HomeController> Localizer
 
 <!DOCTYPE html>
 <html lang="en">
@@ -43,8 +48,11 @@
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a href=@Url.Action("Index", "Home") class="nav-link scrollto active">Anasayfa</a></li>
-                    <li><a href=@Url.Action("Index", "Login") class="btn-get-started scrollto">İnternet Bankacılığı</a></li>
+                    <li class="nav-item">
+                        @await Html.PartialAsync("_LanguagePartial")
+                    </li>
+                    <li><a href=@Url.Action("Index", "Home") class="nav-link scrollto active">@Localizer["anasayfa"]</a></li>
+                    <li><a href=@Url.Action("Index", "Login") class="btn-get-started scrollto">@Localizer["bankacilik"]</a></li>
 
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -61,9 +69,9 @@
             </div>
 
             <div class="hero-info" data-aos="zoom-in" data-aos-delay="100">
-                <h2>Her an dilediğiniz yerde<br><span>xxxBank'lı</span><br>olun!</h2>
+                <h2>@Localizer["Giris"]<br><span />@Localizer["Giris2"]</h2>
                 <div>
-                    <a href=@Url.Action("Index", "Register") class="btn-get-started scrollto">xxxBank Müşterisi olmak için tıklayın</a>
+                    <a href=@Url.Action("Index", "Register") class="btn-get-started scrollto">@Localizer["buton"]</a>
                 </div>
             </div>
 
@@ -77,34 +85,40 @@
             <div class="container" data-aos="fade-up">
 
                 <header class="section-header">
-                    <h3>Hakkımızda</h3>
-                    <p>Hızlı ve Kolay bir bankacılık deneyimi!
+                    <h3>@Localizer["Hakkinda"]</h3>
+                    <p>
+                        @Localizer["Aciklama"]
                     </p>
                 </header>
-
+                <br />
+                <div class="row">
+                    
+                    
+                </div>
+                <br />
                 <div class="row about-container">
 
                     <div class="col-lg-6 content order-lg-1 order-2">
                         <p>
-                        
+
                         </p>
 
                         <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
                             <div class="icon"><i class="bi bi-card-checklist"></i></div>
                             <h4 class="title"></h4> <br />
-                            <p class="description">Ana menü üzerinden varlıklarınızı izleyebilirsiniz.</p>
+                            <p class="description">@Localizer["description"]</p>
                         </div>
 
                         <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
                             <div class="icon"><i class="bi bi-brightness-high"></i></div>
                             <h4 class="title"></h4><br />
-                            <p class="description">Para aktarma işlemlerinizi düşük masraf ile gerçekleştirebilirsiniz.</p>
+                            <p class="description">@Localizer["description2"]</p>
                         </div>
 
                         <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
                             <div class="icon"><i class="bi bi-calendar4-week"></i></div>
                             <h4 class="title"></h4><br />
-                            <p class="description">Bir tıkla müşterimiz olabilirsiniz</p>
+                            <p class="description">@Localizer["description3"]</p>
                         </div>
 
                     </div>
@@ -115,7 +129,7 @@
                 </div>
 
 
-                </div>
+            </div>
 
             </div>
         </section><!-- End About Section -->
@@ -124,7 +138,7 @@
             <div class="container" data-aos="fade-up">
 
                 <header class="section-header">
-                    <h3>Piyasalar</h3>
+                    <h3>@Localizer["piyasa"]</h3>
                 </header>
 
                 <div class="row justify-content-center">
@@ -185,11 +199,11 @@
                             </div>
                         }
 
-                    }          
+                    }
                 </div>
 
             </div>
-     
+
     </main><!-- End #main -->
     <!-- ======= Footer ======= -->
     <footer id="footer">
