--- a/InternetBankaciligi.MVC/Views/Login/Index.cshtml
+++ b/InternetBankaciligi.MVC/Views/Login/Index.cshtml
@@ -1,6 +1,12 @@
 ﻿<link href="~/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link href="~/assets/css/userlogin.css" rel="stylesheet">
 
+@using Microsoft.AspNetCore.Mvc.Localization
+@using InternetBankaciligi.MVC.Controllers
+@using Microsoft.Extensions.Localization
+
+@inject IStringLocalizer<InternetBankaciligi.MVC.Controllers.LoginController> Localizer
+
 @model InternetBankaciligi.Entities.Dtos.SignInUserDto;
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -8,29 +14,30 @@
     <div class="row justify-content-center">
         <div class="col-lg-9">
             <div class="card shadow-lg border-0 rounded-lg mt-5 col-md-6">
-                <div class="card-header"><h3 class="text-center font-weight-light my-4"><span class="fas fa-house-user"></span> Giriş Yap</h3></div>
+                <div class="card-header"><h3 class="text-center font-weight-light my-4"><span class="fas fa-house-user"></span> @Localizer["giris_yap"]</h3></div>
                 <div class="card-body">
-                    @using (Html.BeginForm("SignIn", "Login", FormMethod.Post)) { 
+                    @using (Html.BeginForm("SignIn", "Login", FormMethod.Post))
+                    {
 
                         <div class="col-lg-6">
                             <div class="form-sample">
                                 <div class="form-group">
-                                    <p><b>TC Kimlik Numarası</b></p>
+                                    <p><b>@Localizer["tc_kimlik"]</b></p>
                                     @Html.TextBoxFor(x => x.TCNo, new { @class = "form-control" })<br />
                                 </div>
                                 <div class="form-group">
-                                    <p><b>Kullanıcı Şifresi</b></p>
-                                    @Html.TextBoxFor(x => x.UserPassword, new { @class = "form-control", type = "Password" })<br />
+                                    <p><b>@Localizer["kullanici_sifresi"]</b></p>
+                                    @Html.TextBoxFor(x => x.UserPassword, new { @lass = "form-control", type = "Password" })<br />
                                 </div>
                             </div>
 
-                            <button class="btn btn-info">Giriş Yap</button>
+                            <button class="btn btn-info">@Localizer["giris_yap"]</button>
 
                         </div>
                     }
-                <div class="card-footer text-center">
-                    <button class="btn btn-primary" type="button" onclick="location.href='@Url.Action("Register", "Login")'"><span class="fas fa-sign-in-alt"></span>Müşteri Ol</button>
-                </div>
+                    <div class="card-footer text-center">
+                        <button class="btn btn-primary" type="button" onclick="location.href='@Url.Action("Register", "Login")'"><span class="fas fa-sign-in-alt"></span> @Localizer["musteri_ol"]</button>
+                    </div>
                 </div>
                 <div class="col-lg-6" data-aos="fade-right">
                     <img src="assets/img/about-extra-1.svg" class="img-fluid" alt="">
