--- a/InternetBankaciligi.MVC/Views/Login/Register.cshtml
+++ b/InternetBankaciligi.MVC/Views/Login/Register.cshtml
@@ -1,4 +1,10 @@
-﻿@model InternetBankaciligi.Entities.Dtos.UserAddDto;
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using InternetBankaciligi.MVC.Controllers
+@using Microsoft.Extensions.Localization
+
+@inject IStringLocalizer<InternetBankaciligi.MVC.Controllers.LoginController> Localizer
+
+@model InternetBankaciligi.Entities.Dtos.UserAddDto;
 @{
 }
 <link href="~/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -10,29 +16,29 @@
         <div class="col-lg-5">
             <div class="card shadow-lg border-0 rounded-lg mt-5">
                 <div class="card-body">
-                    <div class="card-header"><h3 class="text-center font-weight-light my-4"><span class="fas fa-house-user"></span> Kayıt Formu </h3></div>
+                    <div class="card-header"><h3 class="text-center font-weight-light my-4"><span class="fas fa-house-user"></span>  @Localizer["kayit_formu"] </h3></div>
                     @using (Html.BeginForm("Register", "Login", FormMethod.Post))
                     {
                         <div class="form-sample">
                             <div class="form-group">
-                                <b>@Html.LabelFor(x => x.TCNo)</b>
+                                <p><b>@Localizer["tc_kimlik"]</b></p>
                                 @Html.TextBoxFor(x => x.TCNo, new { @class = "form-control" })<br />
                             </div>
                             <div class="form-group">
-                                <b>@Html.LabelFor(x => x.Name)</b>
+                                <p><b>@Localizer["Ad"]</b></p>
                                 @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })<br />
                             </div>
                             <div class="form-group">
-                                <b>@Html.LabelFor(x => x.Surname)</b>
+                                <p><b>@Localizer["Soyad"]</b></p>
                                 @Html.TextBoxFor(x => x.Surname, new { @class = "form-control" })<br />
                             </div>
                             <div class="form-group">
-                                <b>@Html.LabelFor(x => x.UserPassword)</b>
+                                <p><b>@Localizer["kullanici_sifresi"]</b></p>
                                 @Html.TextBoxFor(x => x.UserPassword, new { @class = "form-control", placeholder = "Parola", type = "Password" })<br />
                             </div>
                         </div>
                         <div class="text-center" style="background-color:white">
-                            <button class="btn btn-info">Müşteri Ol</button>
+                            <button class="btn btn-info">@Localizer["musteri_ol"]</button>
                         </div>
                     }
                 </div>
